fix: remove gap between SideBar and Dashboard

--- a/src/pages/UserDashboardPage/UserDashboard.module.css
+++ b/src/pages/UserDashboardPage/UserDashboard.module.css
@@ -2,7 +2,6 @@
 display: flex;
 align-items: center;
 flex-direction: column;
-  margin-left: 220px;
   background: #d9d9d9;
   min-height: 100vh;
   padding: 24px;
